--- a/testing_idea.ipynb
+++ b/testing_idea.ipynb
@@ -28,14 +28,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "537467b0",
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
-    "schema = {\n",
-    "    \"products\": [\n",
+    "schema = \"\"\" [\n",
     "        {\n",
     "            \"name\": \"string - Name of the product\",\n",
     "            \"price\": \"string - Price of the product (e.g., ₹29,999 or USD 399)\",\n",
@@ -48,7 +47,7 @@
     "            \"battery\": \"string - Battery details (e.g., 4500mAh with fast charging)\",\n",
     "        }\n",
     "    ]\n",
-    "}\n"
+    "\"\"\""
    ]
   },
   {
@@ -234,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "fe809768",
    "metadata": {},
    "outputs": [],
